# IW-Spring24

./: README.md
examples/: python_comp.ipynb  python_generate_matrices.ipynb
examples/arrays/: A-100-0.1.csv  A-test1.csv  b-100-normal.csv  b-10_000-normal.csv  b-200-uniform.csv  b-50-uniform.csv  b-500-normal.csv
examples/arrays/Sparse Matrices/: bcsstk17.mtx  bcsstk36.mtx  ct20stif.mtx  msc23052.mtx  pwtk.mtx
examples/matrices/: A-1000-0.02.csv  A-200-0.05.csv  A-50-0.1.csv  A-500-0.05.csv  G3_circuit.mtx  af_shell3.mtx  b-1000-uniform.csv  cage12.mtx  cage13.mtx  cage14.mtx  cfd1.mtx  ecology2.mtx  nasasrb.mtx  nd3k.mtx  nd6k.mtx  shipsec1.mtx  test1.mtx  test2.mtx  test_symmetric.mtx
jacobi/: data  dune-project  jacobi.opam  testFib
jacobi/lib/: csvUtil.ml  csvUtil.mli  dense.ml  dense.mli  dune  jacobi.ml  jacobiPar.ml  jacobiPar.mli  jacobiSeq.ml  jacobiSeq.mli  sparse.ml  sparse.mli  sparsePar.ml  sparsePar.mli  sparseUtil.ml  util.ml  util.mli  utilPar.ml  utilPar.mli
jacobi/test/: data  dune  jacobi.ml  sparse.ml  testDense.ml  testJacobi.ml  testPar.ml  testPar2.ml  testSparse.ml  testTiming.ml  testTiming2.ml  testTimingExamples.ml  testUtil.ml
jacobi/test/data/: A-test2.csv
report_latex/: Report.tex
