(lang dune 3.10)

(name jacobi)

(generate_opam_files true)

(source
 (github ss7886/IW-Spring24))

(authors "Samuel Sanft")

(license LICENSE)

(package
 (name jacobi)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
